src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/UnexpectedTranslationKey2/InvalidUnexpectedTranslationKey2.php
<?php

namespace Invalid\UnexpectedTranslationKey2;

use Claroline\CoreBundle\AbstractType\ClarolineExtension;

class InvalidUnexpectedTranslationKey2 extends ClarolineExtension
{
    public function getNameTranslationKey()
    {
        return '';
    }
}